[gd_scene load_steps=8 format=3 uid="uid://chal0010vbna6"]

[ext_resource type="Script" path="res://Objects/components/enemy_item_drop.gd" id="1_8get3"]
[ext_resource type="Texture2D" uid="uid://b4b05j6gbewyf" path="res://Resources/Sprites/SpiderEssence.png" id="2_g0ek4"]

[sub_resource type="Animation" id="Animation_8yd4u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.05, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1jnjs"]
resource_name = "fade"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xxfym"]
resource_name = "idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.05, 0), Vector3(0, 0, 0), Vector3(0, -0.05, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.8, 0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wgyp"]
_data = {
"RESET": SubResource("Animation_8yd4u"),
"fade": SubResource("Animation_1jnjs"),
"idle": SubResource("Animation_xxfym")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6ldvq"]
height = 1.0
radius = 0.2

[node name="enemy_item_drop" type="Area3D" groups=["ItemDrop"]]
transform = Transform3D(6.2, 0, 0, 0, 6.2, 0, 0, 0, 6.2, 0, 0, 0)
collision_layer = 512
collision_mask = 513
script = ExtResource("1_8get3")
item = "spider"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.05, 0)
billboard = 1
alpha_cut = 2
texture_filter = 0
texture = ExtResource("2_g0ek4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_3wgyp")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48387, 0)
shape = SubResource("CylinderShape3D_6ldvq")

[node name="queueFreeTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="queueFreeTimer" to="." method="_on_queue_free_timer_timeout"]
